chore: fundemental styling/layout

--- a/mockups/admin/users.html
+++ b/mockups/admin/users.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <div id="user-table">
+    <div id="table-options">
         <div id="filter-select">
             <label>Hide: </label>
             <label><input type="checkbox" class="filter">Username</label>
@@ -77,10 +77,10 @@
             <option value="100">100</option>
             <option value="150">150</option>
         </select><br>
-
+        <input type="text" id="search" placeholder="Search by username">
+    </div>
     <div id="user-table">
         <button id="add-user-btn">Add New User</button>
-        <input type="text" id="search" placeholder="Search by username">
         <table>
             <thead>
                 <tr>
